// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`divider using div 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-divider"
    role="separator"
  />
</DocumentFragment>
`;

exports[`divider using hr 1`] = `
<DocumentFragment>
  <hr
    class="pf-v5-c-divider"
  />
</DocumentFragment>
`;

exports[`divider using li 1`] = `
<DocumentFragment>
  <li
    class="pf-v5-c-divider"
    role="separator"
  />
</DocumentFragment>
`;

exports[`vertical divider 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-l-flex"
  >
    <div
      class=""
    >
      first item
    </div>
    <hr
      class="pf-v5-c-divider pf-m-vertical"
    />
    <div
      class=""
    >
      second item
    </div>
  </div>
</DocumentFragment>
`;
